compiler/acton/test/typeerrors/ex23.act
def f(x,s : str):
    if s==7:
       return x
    else:
       return x+x

'''
This gives a misleading error message; the last constraint is


  |
2 |    if s==7:
  |       ^^^^
The type of s == 7 (which we call t1) must implement __builtin__.Eq


Instead of "The type of s == 7" one wants "a common supertype of s and 7" (?)

Fix should be done in the 

    infer env e@(CompOp l e1 [OpArg op e2])

case in Types.hs.


Similar problems show up for other binary operators.
'''
